version2/net-collection/programs.md
#The NET Collection

## Individual Programs
**15th National Debate Tournament at West Point**: 30 minute program</br>
**1967 Carnegie Commission Report: Public Television: A Program for Action**: 90 minute program, produced in 1967 by NET</br>
**A Boy and His Horse**</br>
**A Child's Christmas in Wales**: 30 minute program, produced in 1963 by Marvin Lichtner and Margin Productions Ltd.</br>
**A Discussion with J. Reston**</br>
**A Hand Up**: 30 minute program, produced by World Neighbors</br>
**A Man Alone: Charles deGaulle**: 1 hour program, produced in 1965 by CBC</br>
**A Matter of Protection**: 30 minute program, produced by deRochhmont</br>
**A Matter of Survival**: 1 hour program, produced in 1970 by NET</br>
**A Mission of Discovery**: 30 minute program</br>
**A Piece of Cake**: 60 minute program, produced in 1969</br>
**A Probing Mind**: 30 minute program, produced in 1962 by NET</br>
**A Profile of KQED**: 20 minute program, produced by KQED</br>
**A Renaissance Life**: 1 hour program</br>
**A Sleep of Prisoners**: 90 minute program, produced in 1965 by NET</br>
**A Song Recital**: 1 hour program</br>
**A Sort of Paradise and Pocomania**: 1 hour program, produced in 1966 by BBC</br>
**A Speck of Progress**: 12 minute program</br>
**A Time and Place for Study**: 30 minute program</br>
**A Word About Rome**: 30 minute program, produced by RAI</br>
**Aaron Copland Meets the Soviet Composers**: 30 minute program, produced in 1959 by WGBH</br>
**Abbey of the English**</br>
**ABM Hearings**: 60 minute program, produced in 1969 by NET</br>
**About Peter Grimes**: 30 minute program</br>
**Accent on Music**</br>
**Actor's Choice: John Donne**: 30 minute program</br>
**Actor's Choice: Walt Whitman**</br>
**Adieu de Gaulle**: 1 hour program, produced in 1969 by NET</br>
**Advanced Science: Challenge of the 60s**</br>
**Adventures in Learning**: 30 minute program, produced in 1967 by Encyclopedia Britannica</br>
**AEC Report: Man and the Atom**: 1 hour program, produced in 1964 by Harold Meyer Productions, Inc.</br>
**Africa, My Africa **: 1 hour program, produced in 1964 by Canadian Broadcasting Corporation</br>
**Africa's Twilight Kingdom**: 30 minute program, produced in 1959</br>
**African Revolutionary**: 30 minute program, produced in 1966 by BBC</br>
**Age of Dissent: Young Men with Opinions**: 1 hour program, produced in 1961 by National Film Board of Canada</br>
**Agriculture in an Uneasy World**: 30 minute program, produced in 1961 by WMSB-TV</br>
**Agriculture: The Need is Now**: 1 hour program, produced in 1961 by KUON</br>
**Ah, Beh, Veh of Russian**</br>
**AIP Conference**</br>
**Alaska, 1961: Giant Bears Go Fishing**</br>
**Alfond Martin**</br>
**Alicia Alonzo**: 1 hour program</br>
**Alvin Ailey: Memories and Visions**</br>
**American Ballet Theatre**</br>
**American Christmas**: 1 hour program</br>
**American Indian **: 1 hour program</br>
**American University**</br>
**American Values**</br>
**American Voter**</br>
**Americans from Hungaria**</br>
**Amsterdam Concertgebouw Orchestra**: 1 hour program, produced in 1967 by International Television Corporation</br>
**An American Journey**: 1 hour program, produced in 1972 by WNET</br>
**An Essay on Death: A Memorial to John F. Kennedy**: 1 hour program, produced in 1964 by NET</br>
**Anatomy of Violets**</br>
**And All That Jazz**: 30 minute program, produced in 1964 by KRMA</br>
**And No Bells Ring **: 1 hour program, produced by Ford Foundation</br>
**And There Was Light**: 30 minute program</br>
**Andersonville Interview**: 30 minute program</br>
**Angotee: A Day in June**</br>
**Any Resemblances **: 1 hour program, produced in 1970 by Tom McDonough Films, Inc.</br>
**Appalachian Spring**: 1 hour program, produced in 1960 by WQED</br>
**Arab Summer**</br>
**Art in Seattle**: 1 hour program</br>
**Arthur Penn: An American Identity**: 90 minute program</br>
**Arthur Penn: Themes and Variants**</br>
**Arthur Rubinstein**: 1 hour program, produced in 1969 by BBC</br>
**Arts and the School**: 30 minute program</br>
**Asian Prayer, Asian Sword**: 1 hour program, produced in 1968 by Studio Hamburg in Germany and Associated Television in Britain</br>
**Asking for Trouble**: 30 minute program, produced in 1967 by British Broadcasting Corporation</br>
**Assessement of Cambodia**: 30 minute program, produced in 1970 by NET</br>
**Atomic Energy**: 30 minute program</br>
**Atoms for Peace**</br>
**Atoms for Power**: 30 minute program, produced in 1958 by META</br>
**Attica: The Official Report of the New York State Special Commission **: 2 hours, plus a 30 minute spinoff program, produced in 1972</br>
**Aviation Weather**</br>
**Ayub Khan's Pakistan**</br>
**Bach and His Sons: Overwhelming Legacy**: 1 hour program, produced in 1966 by WNDT</br>
**Bach Mass in B Minor**: 1 hours program</br>
**Back Stage**: 30 minute program</br>
**Background to Berlin **: 30 minute program, produced in 1967 by North Atlantic Treaty Organization</br>
**Background to Latin America**: 1 hour program, produced in 1965 by National Film Board of Canada</br>
**Baghdad by the Bay **: 90 minute program, produced in 1961</br>
**Ballet Mit Balanchine**</br>
**Ballet, Child of Dance**</br>
**Bandolero**</br>
**Bartok: A Portrait**: 1 hour program, produced in 1963 by KQED/National Educational Television</br>
**Basic Russian Language: TV Schooltime**: 1 hour program, produced by META</br>
**Battered Child**: 1 hour program, produced in 1969 by WTTW</br>
**Battle of Belfast**: 30 minute program, produced in 1969 by National Educational Television</br>
**Battle Over the Migrant**: 30 minute program, produced in 1965</br>
**Beethoven Archduke Trio**: 75 minute program</br>
**Beethoven Personality **: 40 minute program, produced in 1970 by WGBH</br>
**Beethoven's Fifth Symphony**: 1 hour program</br>
**Beethoven's Seventh Symphony**: 1 hour program</br>
**Before Saturn**: 15 minute program, produced in 1963 by NASA</br>
**Beginning of Life**: 1 hour program, produced in 1968 by NET</br>
**Benny in Brussels**: 1 hour program, produced in 1959 by Westinghouse Broadcasting Company, Inc.</br>
**Berkeley: People's Park War**: 1 hour program, produced in 1969 by KQED</br>
**Bernstein in London**: 1 hour program, produced in 1972 by WNET</br>
**Berstein and the Vienna Philharmonic**: 2 hours program</br>
**Biafra**: 1 hour program</br>
**Biology Plus**</br>
**Birth of a University**: 25 minute program, produced in 1967 by KOGO</br>
**Black and White Together**: 1 hour program, produced in 1969 by NET</br>
**Black Campus and Death in the Morning**: 30 minute each program, produced in 1966 by British Broadcasting Corporation</br>
**Black Coal, Red Power**: 90 minute program, produced in 1972 by WNET</br>
**Black Composers**: 90 minute program, produced in 1972 by WNET</br>
**Black Marries White**: 30 minute program, produced in 1964 by Rediffusion Television, Ltd.</br>
**Black Natchez**: 1 hour program, produced in 1967 by Edward Pincus and David Neuman</br>
**Black Radicalism**</br>
**Bolt Current Resistance**</br>
**Born Chinese**: 1 hour program, produced in 1965 by British Broadcasting Corporation</br>
**Boston Pops I **: 135 minute program, produced in 1961 by WGBH</br>
**Boston Pops II **: 90 minute program, produced in 1967 by WGBH</br>
**Boston Pops III **: 105 minute program, produced in 1968 by WGBH</br>
**Boston Symphony Orchestra II**</br>
**Boulez: A Portrait in Three Movements**: 90 minute program, produced in 1971 by Educational Broadcasting Corporation</br>
**Bridge on the Jordan**: 1 hour program, produced in 1967 by NET and the UN</br>
**British Public School**: 53 minute program, produced in 1962 by Associated Television of Great Britain</br>
**Broadcasting: A Candid Apraisal**: 1 hour program, produced in 1961 by WHYY-TV</br>
**Brother Buzz**</br>
**Bryan Beavers: A Moving Portrait**</br>
**Building the Bomb**: 1 hour program, produced in 1965 by BBC</br>
**Bullets vs. Cleveland**</br>
**Burma/Korea: Uneasy Peace**: 1 hour program, produced in 1969 by Norddeutscher Rundfunk</br>
**But Names Will Never Hurt Me**</br>
**Cable Revolution: Tomorrow's Pattern of Communication**</br>
**California Chamber Symphony Orchestra**: 1 hour program, produced in 1965 by KCET</br>
**Cambodia: Progress Report **: 1 hour program, produced in 1970 by NET</br>
**Campus Crossroads**: 30 minute program, produced in 1962 by Yale University</br>
**Canadian-Russian Hockey **: 150 minute program</br>
**Cancer: A Case for Treatment**</br>
**Carmen**</br>
**Carmina Burana**: 1 hour program, produced in 1964</br>
**Case Studies in Practical Politics **: produced in 1958 by WQED</br>
**Casino Society**</br>
**Ceremony of Innocence**: 90 minute program, produced in 1970</br>
**Challenge of Change: Case for Counseling**: 30 minute program, produced in 1962 by Louis de Rochemont</br>
**Changing UN**: 30 minute program</br>
**Che Guevara: End of Revolution?**</br>
**Chicago Jazz**: 30 minute program, produced in 1968 by WTTW</br>
**Chicago: Native View**: 30 minute program</br>
**Chief of State: Archbishop Makarios**: 1 hour program, produced in 1963 by NET</br>
**Chief of State: Mohammad Ayub Khan**: 1 hour program, produced in 1963 by NET</br>
**Child's Diary**</br>
**Children in the Balance**: 1 hour program, produced in 1969 by NET</br>
**Children of the World**: 1 hour program, produced in 1971 by European Broadcasting Union</br>
**Children's Puppet Special**</br>
**China and the US: The Next Decade**: 1 hour program, produced in 1969 by NET</br>
**China in the 70s**: 1 hour program, produced in 1970 by University of Minnesota in cooperation with KTCA</br>
**Chinese Art **: 1 hour program</br>
**Chinese in the Far East**</br>
**Chou En-Lai**: 90 minute program, produced in 1960 by WGBH</br>
**Christmas in New England**: 30 minute program, produced in 1958 by WGBH</br>
**Christmas in the Marketplace**</br>
**Citizen Diplomacy**: 30 minute program</br>
**City at Night: Mathematica**: 45 minute program, produced by KTLA</br>
**Civil Rights Summer '66**: 1 hour program, produced in 1966 by NET</br>
**Civil Rights: What Next?**: 1 hour program, produced in 1968</br>
**Civil Rights: What Now**</br>
**Civil War Roundtable**: 1 hour program, produced in 1960</br>
**Cliff's Sore Foot**</br>
**Close Up of Jean Cocteau**: 30 minute program, produced in 1963 by RTF</br>
**Close Up on Germany**</br>
**Colette: My Mother's House**: 90 minute program, produced in 1972 by EBC</br>
**Colloquy**: 30 minute program</br>
**Color by Design/Color and Brightness **: 15 minute program, produced in 1967 by CBS</br>
**Color Her Sunshine**</br>
**Color Us Black**: 1 hour program, produced in 1968 by NET</br>
**Comden and Green**</br>
**Come Blow Your Horn**: 30 minute program, produced in 1968 by Jefferson</br>
**Communication System**</br>
**Comparisons: Courtship**: 1 hour program, produced by NFB</br>
**Comparisons: Four Teachers**: 1 hour program, produced by NFB</br>
**Concert of the Nations**: 90 minute program, produced in 1965 by German Television Station, Second Program, Zweites Deutsches Fernsehen, Mainz</br>
**Concerto Baroque and Apollo**: 30 minute program</br>
**Conference on Education**</br>
**Conference on World Tensions**: 1 hour each program, produced in 1961 by WTTW</br>
**Confrontation**: 90 minute program, produced in 1969 by WQED</br>
**Confronted**: 60 minute program, produced in 1963 by WGBH</br>
**Congress 1967**: 90 minute program</br>
**Congressional Clinic**: 30 minute program, produced in 1959 by Potomac Films</br>
**Congressional Clinic II**: 30 minute program</br>
**Conservative Mr. Buckely**: 1 hour program, produced in 1969 by NET</br>
**Consumer Information Pilot **: 30 minute program, produced in 1963</br>
**Conversation with Dean Rusk**: 1 hour program, produced in 1967 by NET</br>
**Conversation with Earl Warren**: 1 hour program, produced in 1969 by McClatchy Broadcasting Co.</br>
**Conversation with George London and Marcia Davenport**: 30 minute program, produced in 1970 by NET</br>
**Conversation with Ingrid Bergman**: 1 hour program, produced in 1967 by NET and KCET</br>
**Conversation with James Reston**: 1 hour program, produced in 1966 by NET</br>
**Conversation with Milovan Djilas**: 1 hour program, produced in 1968 by NET</br>
**Conversation with Muhammad Ali**: 30 minute program, produced in 1968 by WGBH</br>
**Conversation with President Kennedy's Biographer**: 30 minute program, produced in 1963 by NET</br>
**Conversation with Richard Nixon**: 1 hour program, produced in 1967 by NET</br>
**Conversation with Saul Alinsky**: 1 hour program, produced in 1965 by WTTW</br>
**Conversation with Sir Laurence Olivier**: 1 hour program, produced in 1967 by WGBH</br>
**Count Ory **: 100 minute program, produced in 1962 by Radio-Televisione Italiana (RAI)</br>
**Countdown: NORAD**: 95 minute program, produced in 1962 by WRKB</br>
**Courts, Warts, and All **: 30 minute program, produced in 1970 by KCET</br>
**Crime and Punishment **: 2 hours program, produced in 1966 by Rediffusion Television, London</br>
**Crime and the Urban Crisis**: 1 hour program, produced in 1969 by KQED</br>
**Crisis in the Skies**</br>
**Crisis of the American Newspaper**: 1 hour program, produced in 1965 by NET</br>
**Crisis on Campus**: 1 hour each program, produced in 1970 by NET</br>
**Cuba Today**: 1 hour program, produced in 1967 by NET</br>
**Cuban Revolution**</br>
**Czechoslovakia**: 1 hour program</br>
**D-Day and 25**: 1 hour program, produced in 1969 by NCRV, Dutch Television</br>
**Dallas Symphony**: 1 hour program</br>
**Danby Stream**</br>
**Dance Concert**</br>
**Dancer's World**: 30 minute program, produced in 1958 by WQED</br>
**Dandelion**: produced in 1970 by NET Division, EBC</br>
**Danger Frontier: The Other Port**: 1 hour, and re-edited to 30 minute program, produced by Telepool-Munich</br>
**Dante's Inferno**: 90 minute program</br>
**Darwin**: 1 hour program, produced in 1968 by Canadian Broadcasting Corporation</br>
**Dateline: Eastern Europe**: 1hour program, produced in 1969 by NET</br>
**Dateline: Southeast Asia**: 1 hour program, produced in 1969 by NET</br>
**David Ben-Gurion**: produced in 1960 by WGBH</br>
**Dean Rusk**</br>
**Dean Rusk: Senate Foreign Relations Hearings**: produced in 1968 by NET</br>
**Dear Liar**: 90 minute program, produced in 1965 by WGBH</br>
**Debate: Baldwin vs. Buckley**: 1 hour program, produced in 1965 by BBC</br>
**Decade of Living with Russia**</br>
**Demonstrations: Exploring the University and Ragtime Era**</br>
**Demonstrations: The Playwright and Main Street**</br>
**Devil in the Backlands**: 1 hour, originally 90 minute program, produced in 1965 by Adrian Cowell</br>
**Dialogue on Red China**: 1 hour program, produced in 1964 by NET</br>
**Dialogue with Malcolm Boyd**: 1 hour program</br>
**Dialogue: Martin Buber and Israel **</br>
**Dick Gregroy is Alive and Well**: 1 hour program, produced in 1970 by NET</br>
**Dies Irae**</br>
**Divided We Stand**: 1 hour program</br>
**Do You Know the Milky Way?**: 90 minute program</br>
**Do You Wanna Hear Some Ragtime?**: 1 hour program, produced in 1970 by WHYY</br>
**Doctors of Hope**: 1 hour program, produced in 1961 by WOSU-TV and NET present</br>
**Don Carlos**: 180 minute program, produced by Bavaria Atelier</br>
**Don Giovanni**: 180 minute program, produced in 1966 by Harmomy Films Ltd. (London)</br>
**Don Pasquale**: 1 hour program, produced by KRMA-TV</br>
**Don't Shoot the Composer**</br>
**Done**</br>
**Downeast Smile-In **: 30 minute program, produced in 1970 by Maine ETV Network</br>
**Dr. John H. Knowles: A Case of Politics**: 30 minute program, produced in 1969 by NET</br>
**Dr. Stanton's Speech**: 18 minute program</br>
**Drugs are Like That**</br>
**Dubliners**: 30 minute program, produced in 1963 by Associated Rediffusion, Ltd., London, England</br>
**DuBridge Goes to Washington**: 30 minute program, produced in 1969 by KCET</br>
**Duke Ellington: A Concert of Sacred Music**: 1 hour program, produced in 1967 by KQED</br>
**Duke Ellington: Love You Madly**: 1 hour program, produced in 1967 by KQED</br>
**Dwight David Eisenhower**: 1 hour program, produced by NET</br>
**Earth Day**: 6 hours and 30 minute program, produced in 1970 by NET</br>
**Eastman Theatre Gala**</br>
**Ed and Frank**: 34 minute program, produced in 1962 by BBC and NET</br>
**Educational Television 1959**: 15 minute program, produced in 1959</br>
**Edward Weeks **: produced in 1960</br>
**Einstein**: 1 hour program, produced in 1966 by BBC</br>
**Einstein: Story of the Man**</br>
**Eisenhower vs. Khrushchev: The Issues **: 30 minute program, produced in 1959</br>
**Eleanor Roosevelt**: 10 minute program, produced in 1960 by USIA</br>
**Election in Britain**: 30 minute program, produced by Rediffusion Television Ltd. - England</br>
**Election Specials**: produced in 1970</br>
**Elections '70. Part 1: Mandate for Tomorrow**</br>
**Elections '70. Part 2**</br>
**Elementary Russian**: 30 minute program</br>
**Elizabeth R **: 90 minute program, produced by BBC</br>
**Elizabeth Schwarzkopf**</br>
**End of a Revolution**: 1 hour program, produced in 1968 by NET</br>
**Enemies**: 2 hours program</br>
**Environmental Theatre: Elia Kazan**</br>
**Environmental Theatre: Mr. Silver**</br>
**Ernest Ansermet**: 30 minute program, produced in 1968 by Swiss Television</br>
**Eugene Onegin**</br>
**Europa**: 10 minute program, produced by Pelican Films Inc.</br>
**Ever on Sunday: Children's Jazz Festival**</br>
**Every 7th Child**: 1 hour program</br>
**Experiment in Freedom**</br>
**Explorations Decemeber 24, 1954**</br>
**Face of the World**: 30 minute program, produced in 1962 by Lewis Jacobs Productions</br>
**Face to Face: Albert Finney**</br>
**Family Finance **: 30 minute program, produced in 1964 by Visions Associates</br>
**Fashion**</br>
**Father and Son**</br>
**Faure Requiem**</br>
**Federal Aid to Education Special**: 30 minute program, produced by WFIL (acquisition)</br>
**Festival Orchestra of New York**: 1 hour program, produced in 1965 by NET</br>
**Fiddle and Faddle**</br>
**Fine Arts Quartet with J. P. Rampal**</br>
**Fischer-Dieskau Recital**</br>
**Fisk Jubilee Singers**</br>
**Five College Presidents: An Exchange of Views**: 1 hour program, produced in 1965 by WNDT</br>
**Florence: Days of Destruction **: 1 hour program, produced in 1966 by Radiotelevisione Italiana</br>
**For Those Who Stay**: 24 minute program, produced in 1964 by Woodrow Wilson School of Public and International Affairs, Princeton University</br>
**Formosa and Chiang Kai-shek's Dream**: 1 hour program, produced in 1965 by ZDF - Germany</br>
**Four Billion Puppets - Count 'em!**: 1 hour program, produced in 1970 by NET</br>
**Four Families**: 1 hour program, produced in 1961 by National Film Board of Canada</br>
**Four Religions**: 1 hour program, produced in 1961 by National Film Board of Canada</br>
**France**</br>
**Free Time**</br>
**Freeway**</br>
**French Eyes on the Future**: 1 hour program, produced in 1966 by British Broadcasting Corporation</br>
**Friends and Love**: 1 hour program</br>
**From Bach to Rock**: 30 minute program</br>
**From Sea to Shining Sea**: 30 minute program</br>
**From the Mind of Man: Common Manifesto**</br>
**G.I. Joe**: 30 minute program, produced in 1966 by Studio Hamburg, West Germany</br>
**General Douglas MacArthur Obituary**</br>
**General George C. Marshall Obituary**: 90 minute program, produced in 1959 by United States Information Agency</br>
**Girard Trust**</br>
**Girl in Danger: Afraid of School**</br>
**Giselle**</br>
**Glacier Legacy**</br>
**Glenn Gould: Off the Record**: 30 minute program, produced in 1962 by National Film Board of Canada</br>
**Glenn Gould: On the Record**: 30 minute program, produced by National Film Board of Canada</br>
**God in Japan**</br>
**Good Housing in Good Neighborhoods **: 30 minute program, produced in 1960 by WQED</br>
**Good Things Happen over Coffee**: 30 minute program</br>
**Goodbye, City Hall**: 1 hour program, produced in 1969 by NET's special projects unit</br>
**Governor's Collin's Address: Man's Responsibility to Man**: 15 minute program</br>
**Grassroots**: 35 minute program, produced in 1961 by BBC and NET</br>
**Great American Dream: Three Views**</br>
**Groove Tube**: 1 hour program</br>
**Growing Up Together**</br>
**Hands that Made America**: 25 minute program, produced in 1958 by Life Magazine</br>
**Harold Urey: The Man and the Moon**: 1 hour program, produced in 1969 by KEBS, San Diego</br>
**Haydn Workshop**: 1 hour program</br>
**Heartmakers: Life Insurance**: 1 hour program, produced in 1969 by NET</br>
**Her Majesty, Queen Elizabeth Christmas Message to the Commonwealth **: 25 minute program</br>
**Herbert Hoover Obituary**: 10 minute program, produced in 1960</br>
**Hidden Frontiers**</br>
**Higher Education in the USSR**: 30 minute program, produced in 1959 by University of Pittsburgh</br>
**Higher Place of the Mind: Return to Cambridge**</br>
**History of Herbology**</br>
**History of Mourning Dove**</br>
**Homefront 1971: The President, the Press, and the Public**: 1 hour program</br>
**Hong Kong**: 30 minute program, produced in 1966 by Studio Hamburg</br>
**How a Commercial Artist Works**: 15 minute program</br>
**How Mass Media Affects Children**: 1 hour program, produced in 1970</br>
**Human Environment and World Order**: 1 hour program, produced in 1970 by KLRN</br>
**Human Rights Day Concert**: produced in 1968 by NET</br>
**Hunger in Chicago: To Save the Hungry**</br>
**Hunger: A National Disgrace. Part 1**: 1 hour program, produced in 1969 by NET</br>
**Hunger: A National Disgrace. Part 1**: 1 hour program, produced in 1969 by NET</br>
**I, the Aboriginal**: 1 hour program, produced in 1964 by Australian Broadcasting Commission</br>
**Identity**: 1 hour each program, produced in 1968 by Rensselaer Polytechnic Institute</br>
**Igor Stravinsky**: 90 minute program, produced in 1966 by National Film Board of Canada and WGBH</br>
**In Color, In Color**: 30 minute program</br>
**In Fashion**: 30 minute program, produced in 1968 by NET</br>
**In My Memory**</br>
**In Pursuit of Happiness**: 1 hour program, produced in 1959 by Adult Education Association of USA</br>
**In Search of Hart Crane**</br>
**In the National Interest**</br>
**Independent Mr. Jefferson**: 30 minute program, produced by State University of Iowa</br>
**Inflation**</br>
**Inheritance**: 30 minute program, produced in 1964 by Mithras Films Ltd, London</br>
**Inside China**: 1 hour program, produced in 1965 by Telepool - Munich</br>
**International Indian Ocean Expedition**: 30 minute program, produced in 1967 by Screen Presentations, Inc.</br>
**Intolleranza**: 90 minute program, produced in 1966 by WGBH</br>
**Introducing Roy Buchanan**: 90 minute program, produced in 1971 by NET Division, Educational Broadcasting Corporation</br>
**Irregular Verb to Love **: 100 minute program, produced in 1965 by Majestic Productions</br>
**Island of Fronzen Sea**</br>
**Isolation: Two Views**: 90 minute program, produced in 1971 by WMPB</br>
**Israel Philharmonic Orchestra with Leonard Bernstein**</br>
**Israel's Frontier**</br>
**Jack Beeson**</br>
**James Buswell at Castle Hill**: 1 hour program</br>
**Jazz a la Montreaux**</br>
**Jazz at the Overseas Press Club**</br>
**JFK: His Last Trip Abroad**: 1 hour program, produced in 1964 by German TV</br>
**JFK: His Place in History**: 30 minute program</br>
**Joe**</br>
**John F. White**</br>
**John Foster Dulles: Obituary**</br>
**John Glenn Story**: 30 minute program, produced by NASA</br>
**Journey of the Fifth Horse**: 135 minute program, produced in 1969 by NET</br>
**June 1968: A Summer of Music**: 90 minute program</br>
**June Moon**: 90 minute program</br>
**Just Jazz**</br>
**Kennedy**: 30 minute program, produced by WTTW</br>
**Kennedy International Awards**: 1 hour program, produced in 1966 by WGBH</br>
**King Lear**: 2 hours program</br>
**Knowledge and Ideas**</br>
**Kremlinology**: 1 hour program, produced in 1963</br>
**Kress Collection**</br>
**L'ajo nell'imbaraazo**</br>
**L'Aventura**: 145 minute program, produced in 1966 by NET</br>
**La Finta Giardiniera**: 2 hours program, produced by WGBH</br>
**La Rodine**: 90 minute program</br>
**La Serva Padrona**: 65 minute program, produced in 1963 by CLI</br>
**La Terna Magica**</br>
**Land Grant Murals**: 15 minute program, produced by Penn State</br>
**Landmarks for Liberty**</br>
**Language of Birds**</br>
**Laudes Evangelli**: produced in 1968 by Rediffusion</br>
**Law and Order**</br>
**Lay My Burden Down**: 1 hour program, produced in 1966 by NET</br>
**LBJ: An Uposed Profile**: produced in 1964 by NET</br>
**Learn Russian**: 30 minute program, produced by KQED</br>
**Leonard Bernstein and the London Philharmonic**: 3 hours program</br>
**Less Than President**</br>
**Let Them Learn**</br>
**Let's Figure It**</br>
**Let's Talk**</br>
**Life and Times of Bertrand Russell**: 1 hour program, produced in 1965 by BBC</br>
**Life and Times of Leopold Stokowski**: 1 hour program</br>
**Life and Times of Marshall Tito**: 1 hour program, produced in 1964 by BBC</br>
**Life of Adolf Hitler**</br>
**Life with Radiation**: 30 minute program, produced in 1961 by WQED</br>
**Life, Death, Japanese Music**</br>
**Lincoln Center Ground Breaking Ceremony**: 1 hour program</br>
**Lincoln Center Stage Five: Ballets of the Five Senses**: 1 hour program</br>
**Lincoln Center: A Legend in Born**: 30 minute program</br>
**Lincoln Day Concert**: 2 hours program, produced in 1969 by NET</br>
**Local Issue: Enough to Live on**</br>
**Lorin Hollander: Up Against the Wall**</br>
**Lorraine Hansberry: To Be Young, Gifted and Black**</br>
**Los Pastores**: 30 minute program, produced in 1962 by KUHT</br>
**Louisiana Diary**: 60 minute program, produced in 1964 by KQED</br>
**Lower Depths**: 130 minute program, produced by BBC</br>
**Magic Lantern Christmas**: 30 minute program, produced in 1961 by KRMA</br>
**Main Street: Lansing**</br>
**Majesty in Mantua**</br>
**Man at the Met**</br>
**Man Meets Duck**</br>
**Man Toward the Light**: 15 minute program</br>
**Manitas at the Bull Ring**: 30 minute program</br>
**Marcel Marceau on Mime**: 30 minute program, produced by WGBH</br>
**March 4, 1933**: 90 minute program, produced by WNDT</br>
**Margaret Mead: New Lives for Old**: 90 minute program</br>
**Martha Graham: Night Journey**: 1 hour program, produced in 1967</br>
**Mason Williams: A Gift of Song**: 90 minute program</br>
**Mastery of Space**: 1 hour program, produced by NASA</br>
**Mata Hari**: 1 hour program, produced in 1966 by BBC</br>
**Mathematics Through Discovery**: produced by NET</br>
**Mathematics: Infinity**: produced in 1958 by NBC</br>
**Mathematics: Unending Search for Excellence**: 30 minute program, produced by DHEW</br>
**Maureen Forrester**: 1 hour program, produced in 1966 by NET</br>
**Maybe Tomorrow**</br>
**Medicine at the Crossroads**</br>
**Medicine Men of Africa**</br>
**Meeting of Minds: New Perspectives in Education**</br>
**Melina Mercouri**: 1 hour program</br>
**Melting of Molly**</br>
**Men Against Cancer**</br>
**Men in Orbit**: 1 hour program, produced in 1959 by KUHT</br>
**Messenger from Violet Drive**: 30 minute program, produced in 1964 by KQED</br>
**Mid Channel**: 75 minute program, produced in 1967 by Granada</br>
**Middle East: Search for a Solution**: 1 hour program, produced in 1969 by NET</br>
**Middle East: UN Disaster**: 30 minute program, produced in 1958 by WGBH</br>
**Migrant Labor**: 30 minute program</br>
**Migrant Workers**</br>
**Mike Makes His Mark**</br>
**Mind of Man**: 2 hours program</br>
**Minority Candidates: Where They Stand**: 1 hour program, produced in 1968 by KQED</br>
**Moment of Impact**: produced in 1966</br>
**Monument: Three Epitaphs**</br>
**Moor's Payene**</br>
**Morning Incident**</br>
**Moscow Story**: 1 hour program, produced in 1963 by Australian TV</br>
**Mountain **</br>
**Moving On**</br>
**Mozart Concertos: Lili Kraus**: 90 minute program</br>
**Mozart's Requiem**: 90 minute program</br>
**Mr. Agnew and the News**: 1 hour program</br>
**Mr. Broadway**</br>
**Mr. Germany**: 30 minute program</br>
**Mrs. Eleanor Roosevelt: Obituary**</br>
**Muppets on Puppets**: 1 hour program</br>
**Music Machine**</br>
**Music Makers of Blue Ridge**: produced in 1966 by NET</br>
**Music Men: A Look at Barber Shopping**: 30 minute program</br>
**Music on the River**: 1 hour program, produced in 1962 by Kroll</br>
**Must I, May I**</br>
**Mystic Hunter**: 30 minute program</br>
**Nancy Hanks**: 30 minute program</br>
**Nation 110: Uganda**: 30 minute program, produced in 1963 by BBC</br>
**National Music Camp**</br>
**Navajo: White Arrow**</br>
**NDEA**: 90 minute program</br>
**Nepal: Experiment in Education**: 30 minute program</br>
**NET Opera: Abduction from the Seraglio **: produced in 1970 by NET</br>
**NET: That Other TV**: produced by NET</br>
**New Conservatism**</br>
**New Dimensions of Learning in a Free Society**: 30 minute program</br>
**New Man on Campus**: 1 hour program</br>
**New Visions for Television**</br>
**New Voices in Africa**</br>
**New York Tribune Annual Forum: Constructive Action in Tension Areas: Africa**: 30 minute program, produced in 1958 by Herald Tribune</br>
**Newport Jazz Festival 1967**</br>
**News Front**: 1 hour program, produced in 1970 by NET</br>
**Next Year is Now**: 30 minute program, produced in 1962 by Guggenheim Assoc.</br>
**Nguyen Cao Ky at the National Press Club**: 1 hour program</br>
**Night Journal**</br>
**Nighttime in Misteroger's Neighborhood**</br>
**Ninety Days**</br>
**Nixon Press Conference on March 4, 1971**</br>
**Nixon Press Conference on May 8, 1970**</br>
**Nixon: First Hundred Days**: 1 hour program, produced in 1969 by NET</br>
**Nixon's Address to the American Society of Newspaper Editors**</br>
**Nixon's Address: Prospects on Vietnam**</br>
**Nobel Special**: 1 hour program</br>
**Non-violence in Mississippi**: 15 minute program, produced in 1963 by W. Germany</br>
**Nur Ein Tag**: 90 minute program</br>
**Nuremberg and Vietnam: Who is Guilty?**: 150 minute program</br>
**Odds Against**</br>
**Oil, Coffee and Democracy**: 1 hour program, produced in 1963 by NET</br>
**Olympics in Innsbruck and Tokyo 1964**</br>
**On Call to a Nation**: 75 minute program, produced in 1961 by BBC</br>
**One in a Hundred**</br>
**One Man's Hunger**: 1 hour program, produced in 1963 by Rediffusion</br>
**One to One with John Gardner**: 30 minute program, produced in 1970 by WETA</br>
**Onion Johnny**: 30 minute program, produced in 1963 by BBC</br>
**Oresteia of Aerchylus**</br>
**Orfeo**: 90 minute program</br>
**Oscar Brand's Cornwall**</br>
**Oscar Brand's Gettysburg**</br>
**Our Living Language**</br>
**Our World Interconnect**</br>
**Oxford**: 1 hour program, produced in 1963 by ITC / ATV</br>
**Oxford Action**</br>
**Paraproprietal Society**: 30 minute program, produced in 1961 by KETC</br>
**Paris Must Burn**: 1 hour program, produced in 1966 by German TV</br>
**Part of the Family**: 90 minute program</br>
**Pastore Hearings: Violence and Television**</br>
**Patterns in Mathematics**</br>
**Pauling-Teller Debate**: 1 hour program</br>
**People in Politics**</br>
**Peter and the Wolf**</br>
**Peter Grimes**: 150 minute program</br>
**Plaza Nine**</br>
**Point of View**: 30 minute program</br>
**Poisons, Pests and People**: 1 hour program, produced in 1962 by NFB Canada</br>
**Poland: Between East and West**: 1 hour program, produced in 1964 by NET / German TV</br>
**Police Report**</br>
**Politics of Survival**: 30 minute program</br>
**Poor Pay More**</br>
**Portland Mileage**</br>
**Portrait of a Revolution**: 30 minute program, produced in 1959 by Potomac Films</br>
**Portrait Souvenir: Marcel Proust**: 90 minute program</br>
**Portugal**</br>
**Power and Responsibilty of the Press**: 30 minute program, produced in 1964 by NET</br>
**President Eisenhower's Final Press Conference**: 30 minute program</br>
**President Ford's Speech at the Univeristy of Michigan**</br>
**President Nixon on Cambodia**</br>
**Prisoners of Conscience**</br>
**Productivity: The Key to America's Economic Growth**</br>
**Profile of a Southern Moderate**: 1 hour program, produced by WGTV</br>
**Progress Parade: Photography**</br>
**Project Mohole**: 1 hour program, produced by NSF</br>
**Project Security**</br>
**Projections in Indian Art**</br>
**Prokofiev**: 1 hour program, produced by WNDT</br>
**Public Hearing on Vietnam**: 1 hour program, produced in 1965 by NET</br>
**Puerto Rico: Workshop for Americans**: 30 minute program</br>
**Purposeful American**</br>
**Quest for Peace**: 30 minute program</br>
**Rabindranath Tagore: Founder of Modern Indian Culture**: 30 minute program</br>
**Radical Theatre**</br>
**Ralph Bunche: The New Nations**: 30 minute program</br>
**Rapunzel**: 30 minute program</br>
**Rayburn: Close Up Camera**</br>
**Red Army Singers and Dancers**: 1 hour program, produced in 1965 by BBC</br>
**Reform Before the Revolution**</br>
**Report from Moscow**</br>
**Report from Stowe**: 90 minute program, produced in 1961</br>
**Report from Vietnam. Part 1: Mills of the Gods**: 90  minute program</br>
**Report from Vietnam. Part 2: Western Eyewitness in North Vietnam**: 1 hour program</br>
**Report on Indo-china**</br>
**Report on Soviet Medicine**</br>
**Report on World Population**: produced in 1960 by UN-TV</br>
**Republicans: The New Breed**: 30 minute program, produced in 1965 by LR</br>
**Research Environment in Industry**: 1 hour program, produced in 1969 by UPJOHN</br>
**Return Journey: Dylan Thomas**</br>
**Return to Florence**</br>
**Rise and Fall of Wolfgang Amadeus Mozart**: 1 hour program, produced in 1969 by BBC</br>
**Rise of New Towns**</br>
**Road to Suez**</br>
**Roots of Freedom**</br>
**Rose Festival Parade**</br>
**Rosemary Brown**</br>
**Run for Your Life**</br>
**Running for Life**</br>
**Russia 1963: Coexistence and Conflict**: produced in 1963</br>
**Russian Ballet School**</br>
**Sahara**: 1 hour program, produced in 1961 by German TV</br>
**Sandburg Memorial**: 135 minute program, produced in 1969 by Finnish TV</br>
**Science and Technology in Communist China**</br>
**Science Through Discovery**: 30 minute program, produced in 1963 by NET</br>
**Scott's Last Journey**: 1 hour program, produced in 1963 by BBC</br>
**Search for Excellence**: 30 minute program</br>
**Search for Strindberg**</br>
**Second Look-see**</br>
**Secret of the Desert**</br>
**Seven Against Thebes**</br>
**Seven Days Document**</br>
**Seven Who Dared**: 1 hour program, produced in 1964 by WGBH</br>
**Sisu: Finland's Road Between East and West**: 1 hour program, produced in 1963 by German TV</br>
**Smoke? Why Not?**</br>
**Smoking and Health: Questions**: 30 minute program</br>
**Smoking and Health: The Mark Waters Story**: 30 minute program</br>
**Snow White and Rose Red**: 30 minute program</br>
**So Where are You God?**: 30 minute program</br>
**Socrates**: 90 minute program</br>
**Son of Liberty**: 30 minute program, produced by Assoc. Rediffusion</br>
**Sonny Brown and Fallen Sparrows**: 90 minute program</br>
**Sons and Daughters: That’s' What Life is All About**</br>
**South America Today**</br>
**South American Essay**</br>
**Spain**</br>
**Speaking of Russia**: 30 minute program, produced in 1959 by WTTW</br>
**State of the Union 1967 with David Niven**</br>
**State of the Union 1970**: produced in 1970 by NET</br>
**State of the Union 1971**</br>
**State of the Union Rebuttal**</br>
**Statistics**</br>
**Stone Age to Atom Age**: 1 hour program, produced by NFB Canada</br>
**Story Friends**</br>
**Strategy of Truth**: 1 hour program, produced in 1961</br>
**Stravinsky: A Portrait**: 1 hour program</br>
**Struggle for China**: 90 minute program</br>
**Struggle for Peace**: 1 hour program</br>
**Suburban Living**: produced by NFB Canada</br>
**Sukarno: Prophet or Demogogue**: produced in 1965 by German TV</br>
**Summer in Lebanon**: 1 hour program, produced in 1962 by BBC</br>
**Sunday Night: Death of Socreates**</br>
**Surveillance: Who is Watching?**: 90 minute program</br>
**Symphony in Concrete**</br>
**T. E. Lawrence**: 1 hour program, produced in 1966</br>
**Take this Hammer**: 45 minute program, produced by KQED</br>
**Teacher's Gap**</br>
**Television Comes to the Land**: 25 minute program</br>
**Tempo**</br>
**Ten Years of Turmoil**: 1 hour program, produced in 1958 by SSF</br>
**Tennessee Williams**</br>
**The ABM Question**: 1 hour program, produced in 1969 by NET</br>
**The ABM Vote**</br>
**The American Assembly**: 1 hour program, produced in 1963 by WNDT</br>
**The American Image**: 1 hour program, produced in 1968 by NET</br>
**The Ballad of Smedley the Smoker**</br>
**The Biber Sonata**: 18 minute program, produced in 1965 by Teelpool, Munich</br>
**The Birds**</br>
**The Boer War**: 45 minute program, produced in 1963 by Granada</br>
**The Boy and the Turtle**: 1 hour program, produced in 1970 by KLRN</br>
**The Brave Little Tailor and Other Stories**: 1 hour program, produced in 1970 by NET</br>
**The Christmas Painting**: 30 minute program, produced in 1958 by Greensboro Studio of WUNC</br>
**The Cities: A Question of Survival**: 1 hour program, produced in 1971 by EBC - NET Division, Educational Broadcasting Corporation</br>
**The Coming Space Age**: 1 hour program, produced in 1958 by KRMA</br>
**The Count Down: A Study of World Disarmament**: 30 minute program, produced in 1958 by UN-TV</br>
**The Discontented**</br>
**The Discounters**</br>
**The Disordered Mind**: 1 hour program, produced in 1967 by Canadian Broadcasting Corporation</br>
**The Dispersed**: 1 hour program, produced in 1964 by Television Reporters International</br>
**The Dollar: Poor Apology**</br>
**The Dream Still Lives**: 1 hour program</br>
**The Ecumenical Century**: 1 hour program, produced by Time-Life Broadcast, Inc.</br>
**The Emperor with Grant Johannesen**: 1 hour program</br>
**The Essential Nehru**: 1 hour program, produced in 1964 by Arnold Michaelis</br>
**The Expanding City**</br>
**The Exploding Culture**: 30  minute program, produced by WQED</br>
**The Fall and Rise of the House of Krupp**: 30 minute program, produced in 1965 by Incorporated Television Company Ltd.</br>
**The Far Right in Southern California **: produced in 1964</br>
**The Federal Government and NET**</br>
**The Fifty First State: Harlem Schools**</br>
**The Films of George Melies**: 1 hour program, produced in 1964 by KQED</br>
**The First Priority**: 30 minute program, produced in 1961 by UN-TV</br>
**The Forgotten War**: 1 hour program</br>
**The Fourth R **: 30 minute program, produced in 1962 by WSBT-TV, South Bend, IN</br>
**The Future of the Liberal Arts College**: 1 hour program, produced in 1967 by NET</br>
**The Golden Gate**: 10 minute program</br>
**The Golden Ring**: 90 minute program, produced in 1967 by BBC and Austrian Television Service</br>
**The Good Guys**</br>
**The Gospel According to Peanuts**: 30 minute program, produced in 1966 by KPIX-TV, San Francisco</br>
**The Great Rivals**: 1 hour program, produced in 1964 by NET</br>
**The Green Table**</br>
**The Ham's Wide World**: 30 minute program, produced in 1970 by The American Radio Relay League</br>
**The Imperfect Society**</br>
**The Independent Society**</br>
**The Individual and the Universe**: 50 minute program, produced in 1961 by BBC</br>
**The Influential Americans**: 1 hour program, produced in 1960 by CBS</br>
**The Inland Sea**</br>
**The Innocents**: 1 hour program, produced in 1961 by WGBH</br>
**The Intruders**: 30 minute program, produced in 1964 by Highroad Productions - Denis Mitchell</br>
**The Iron Horse**</br>
**The Issue is Foreign Aid**: 1 hour program, produced in 1958 by William Resnick</br>
**The Land That Waited**: 1 hour program</br>
**The Language of Gesture**</br>
**The Man From Independence: Harry S. Truman Obituary**</br>
**The Man Who Sprang G. Blake**</br>
**The Marriage of Charles the Bold**: 1 hour program, produced by Radio-TV-Belge</br>
**The Marshes of Two Streets**</br>
**The Mighty Warrior**</br>
**The Music of Harry Partch**: 30 minute program</br>
**The Ninety First Day**: produced by Vision Assoc.</br>
**The Nixon Administration**</br>
**The Only War We Seek**: 30 minute program, produced by A.I.D.</br>
**The Pitchmen**: 30 minute program</br>
**The Politics and Comedy of Woody Allen**</br>
**The President's Decision: LBJ**</br>
**The Price of Life**</br>
**The Princess and the Pea**</br>
**The Quiet Takeover**: 1 hour program, produced in 1965 by CBC</br>
**The Red Madonna**: 30 minute program, produced in 1965 by German TV</br>
**The Rejected**: 1 hour program, produced by KQED</br>
**The Relay**</br>
**The Road is Long**: 42 minute program, produced in 1959</br>
**The Scarecrow**: 110 minute program</br>
**The Sculptor's Landscape**</br>
**The Second Mrs. Tanqueray**: 90 minute program, produced in 1955 by BBC</br>
**The Second Summer: Calm or Chaos**: 1 hour program</br>
**The Shepherds and the Magi**</br>
**The Skin of Our Teeth**</br>
**The Smile**</br>
**The Snow Maiden**: 30 minute program</br>
**The Society We Live in**: 1 hour program</br>
**The Solitary Billionaire**: 1 hour program, produced in 1964 by BBC</br>
**The South**</br>
**The Squeeze**</br>
**The Successor**: 1 hour program, produced in 1966 by Anglia</br>
**The Suez Affair**: 1 hour program, produced in 1966 by ITC</br>
**The Sun and Richard Lippold**</br>
**The Tenement**</br>
**The Three Musketeers**: 2 hours program</br>
**The Three Sisters**: 90 minute program</br>
**The Time of Their Lives**: 30 minute program</br>
**The Tin Whistle**: 90 minute program, produced in 1969 by WQED</br>
**The Turtle**</br>
**The Uprooted**: 30 minute program, produced in 1966</br>
**The US and Modern World**</br>
**The US and the Non-western World**: 30 minute program, produced in 1960 by KETC</br>
**The US Army Presents: The Big City**</br>
**The Vital Ocean**: 30 minute program, produced in 1967 by NATO</br>
**The Way and the Word**: 30 minute program</br>
**The White South: Two Views: The Southern Conservative**: 30 minute program</br>
**The White South: Two Views: The Southern Liberal**: 30 minute program</br>
**The Wonder of Beginning**</br>
**The Word and the Way**: 1 hour program</br>
**The World of Carl Sandburg**: 1 hour program, produced in 1967 by Kroll</br>
**The World of David Amran**: 1 hour program</br>
**The World of Hart Crane**: 90 minute program</br>
**The World of William Blake**: 1 hour program</br>
**The Year 2000**</br>
**These Humble Shores and Aga Khan**: 1 hour program, produced in 1966 by BBC</br>
**They Came Singing**</br>
**This is Art**</br>
**This Land**</br>
**Thoughts of an Artist on Leaving the 60s**: 90 minute program</br>
**Three by Martha Graham**</br>
**Three Magical Tales with Sheri Lewis**: 1 hour program, produced in 1970 by NET</br>
**Through My Eyes**: 1 hour program</br>
**Tijuana Brass: Kraft Music Hall**</br>
**Till the Butcher Cut Him**</br>
**Time Enough to See the World**: 30 minute program</br>
**To Be a Composer**</br>
**To Be a Man**</br>
**To Be a Performer**</br>
**To Build a Schoolhouse**: 30 minute program, produced in 1964 by EFL</br>
**To Feed The Hungry: Harris Commission on Hunger in Chicago**: 1 hour program, produced in 1970 by WTTW</br>
**To Speak with Friends**: 30 minute program, produced in 1960 by DHEW</br>
**Train to Calcutta**: 1 hour program</br>
**Transantarctic Expedition**: 1 hour program, produced in 1959 by BBC</br>
**Transatlantic Inquiry**: 30 minute program, produced in 1965 by BBC</br>
**Transitions: Conversations with Wendell Castle**</br>
**Triptych for a Christmas Eve**: 20 minute program</br>
**Tropical Folk Songs**</br>
**Two Arctic Tales**</br>
**Two Faces of Japan**: 1 hour program</br>
**Two Orchestras**: 50 minute program, produced in 1965 by NET</br>
**Two Roads to the Center**: 1 hour program</br>
**Two Trumpets for St. Andrew**: 1 hour program, produced in 1969 by Australian TV</br>
**U.N. Special: The Congo Crisis **</br>
**Un Ballo in Maschera**: 90 minute program</br>
**UN Hearing on Skyjacking**: 1 hour program</br>
**Unfolding Vision**</br>
**Unmarried Mothers**: 1 hour program, produced in 1966 by Granada</br>
**Unusual Lies**</br>
**Urban Crisis**: 30 minute program, produced in 1958 by WKAR</br>
**USA in New Dimensions**: 30 minute program, produced in 1958 by WGBH</br>
**USA: Art as Religion**</br>
**Ustinov ad lib**: 1 hour program, produced in 1967 by BBC</br>
**Ustinov on the Ustinovs**: 1 hour program, produced in 1967 by BBC</br>
**Vanishing Newspapers**</br>
**Veneral Disease Seminar**: 1 hour program</br>
**Venezuela: The Making of a Government**: 1 hour program, produced in 1964 by NET</br>
**Venice 34**: 1 hour program</br>
**Venice Today**: 30 minute program, produced in 1962 by RAI</br>
**Venture into Space**: 30 minute program, produced by KTCA</br>
**Vienna Philharmonic**: 90 minute program</br>
**Vietnam**: produced in 1966</br>
**Vietnam Moratorium**: 1 hour program</br>
**Vietnam: A Different View**</br>
**Vietnam: Coups and Crises**: 1 hour program, produced in 1964 by German TV</br>
**View From Latitude Zero**: 1 hour program</br>
**Villanova Jazz Festival**: 90 minute program, produced in 1963 by WHYY</br>
**Vision of William Blake**: 30 minute program</br>
**Viva Mexico**</br>
**Walt Harper at Falling Water**: 1 hour program</br>
**War and the People**: 1 hour program</br>
**War and the Wasteland: Dulce of Decorum**</br>
**War and the Wasteland: Sweeny Among the Nightengales**</br>
**Warsaw Ghetto**: 1 hour program, produced in 1966 by BBC</br>
**Washington Theatre Club**: 90 minute program</br>
**Washington Week in Review**: 30 minute program</br>
**Watch on the Mekong**: 1 hour program, produced in 1962 by Rediffusion</br>
**Water Everywhere**: 15 minute program</br>
**We Shall Overcome**: 30 minute program, produced by WGBH</br>
**We Speak Russian**: 30 minute program</br>
**Weapons of Gordon Parks**: 30 minute program</br>
**Wedding on Saturday**: 30 minute program, produced in 1966 by Granada</br>
**Weston's Report: Poverty**</br>
**What Has TV Done to Politics**: 1 hours program</br>
**What's in a Word**</br>
**Whirligig of Life**</br>
**White House Conference on Children: A Preview**: 1 hour program, produced in 1970 by WETA</br>
**Who Does the Negro Think His is?**: 1 hour program, produced in 1965 by NET</br>
**Who Killed Mary**</br>
**Whooping the Blues**</br>
**Why Save Florence**: 1 hour program</br>
**Will the Real Normal Mailer Please Stand Up**: 1 hour program, produced in 1968 by NET</br>
**William Blake: As a Man is**</br>
**Win, Place and Show**</br>
**Winston Churchill Obituary**: 30 minute program</br>
**WNET Opera Theater: The Death Goddess **</br>
**Years Without Harvest**: 30 minute program, produced in 1963 by WNDT</br>
**You Can't Back Down**: 30 minute program, produced in 1968 by NFB</br>
**Young Audience: NY Woodwind Quartet**: 1 hour program</br>
**Young People's Film Festival**: 1 hour program</br>
**Youth Dances**: 15 minute program, produced by Dance in Educ. Fund</br>
**Yugoslavia: Education Builds a Nation**: 30 minute program</br>
